--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,15 @@
     "hack-the-planet-e2e": {
       "tags": [],
       "implicitDependencies": ["hack-the-planet"]
+    },
+    "api": {
+      "tags": []
+    },
+    "data": {
+      "tags": []
+    },
+    "ui": {
+      "tags": []
     }
   }
 }
